2005-12-27  Leif Ekblad  <leif@rdos.net>

	* config.bfd: Add support for RDOS targets.

2005-12-27  Marty Leisner  <leisner@rochester.rr.com>

	* dwarf2.c (lookup_symbol_in_function_table): Check for a function
	name before passing it to strcmp.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (elf_find_function): Don't ignore section syms.
	Simplify filename logic.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (add_stub_sym): Pass info rather than htab.
	Use different names for pic vs non-pic, '.' instead of '_'.
	(allocate_dynrelocs): Adjust add_stub_sym call.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (bfd_section_from_shdr): Treat invalid reloc sections as
	normal sections rather than returning false.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* coff-h8300.c (h8300_reloc16_extra_cases): Use input section
	"output_offset" instead of link order "offset".
	* coff-h8500.c (extra_case): Likewise.
	* coff-w65.c (w65_reloc16_extra_cases): Likewise.
	* coff-z80.c (extra_case): Likewise.
	* coff-z8k.c (extra_case): Likewise.
	* linker.c (default_indirect_link_order): Likewise, "size" too.
	* ecoff.c (ecoff_indirect_link_order): Likewise.

2005-12-27  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* po/SRC-POTFILES.in: Regenerate.

2005-12-24  Alan Modra  <amodra@bigpond.net.au>

	* aix5ppc-core.c: Remove duplicate prototypes.
	(xcoff64_core_file_matches_executable_p): Provide implementation
	for !AIX_5_CORE.
	* corefile.c (generic_core_file_matches_executable_p): Correct
	syntax error in prototype.
	* libbfd-in.h (generic_core_file_matches_executable_p): Delete.
	* libbfd.h: Regenerate.
	* bfd-in2.h: Regenerate.

2005-12-23  Michael Weiser  <michael@weiser.dinsnail.net>

	PR 1150
	* elf-bfd.h (struct elf_backend_data): New field
	'elf_backend_ignore_undef_symbol'.
	* elfxx-target.h (elf_backend_ignore_undef_symbol): Define to NULL
	if not already defined.